@@ -1,0 +1,231 @@
+<?xml version="1.0"?>
+<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
+
+<modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls</id>
+	<version>0.6</version>
+
+	<file name="$sourcedir/Display.php">
+		<operation>
+			<search position="replace"><![CDATA[
+	// Load the proper template and/or sub template.
+]]></search>
+			<add><![CDATA[
+	//	301 redirects
+	if (isset($context['pretty']['oldschoolquery']))
+	{
+		$url = 'topic=' . $topic . '.' . (isset($_REQUEST['start']) ? $_REQUEST['start'] : '0') . (isset($_REQUEST['prev_next']) ? ';prev_next=' . $_REQUEST['prev_next'] : '') . (isset($_REQUEST['topicseen']) ? ';topicseen' : '') . (isset($_REQUEST['all']) ? ';all' : '') . (isset($_REQUEST['viewResults']) ? ';viewResults' : '');
+		redirectexit($url, false, true);
+	}
+
+	// Load the proper template and/or sub template.
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/MessageIndex.php">
+		<operation>
+			<search position="replace"><![CDATA[
+	if (WIRELESS)
+]]></search>
+			<add><![CDATA[
+	//	301 redirects
+	if (isset($context['pretty']['oldschoolquery']) || $_REQUEST['board'] != $context['pretty']['board_urls'][$board])
+	{
+		$url = 'board=' . $board . '.' . (isset($_REQUEST['start']) ? $_REQUEST['start'] : '0') . (isset($_REQUEST['sort']) ? ';sort=' . $_REQUEST['sort'] : '');
+		redirectexit($url, false, true);
+	}
+
+	if (WIRELESS)
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/QueryString.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function cleanRequest()
+{
+	global $board, $topic, $boardurl, $scripturl, $modSettings;
+]]></search>
+			<add><![CDATA[
+function cleanRequest()
+{
+	global $board, $topic, $boardurl, $scripturl, $modSettings, $context, $db_prefix;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		// Now make absolutely sure it's a number.
+		$board = (int) $_REQUEST['board'];
+]]></search>
+			<add><![CDATA[
+		// Now make absolutely sure it's a number.
+		// Check for pretty board URLs too, and possibly redirect if oldschool queries were used.
+		if (is_numeric($_REQUEST['board']))
+		{
+			$board = (int) $_REQUEST['board'];
+			if (!isset($_REQUEST['pretty']))
+				$context['pretty']['oldschoolquery'] = true;
+		} else {
+			$pretty_board_lookup = unserialize($modSettings['pretty_board_lookup']);
+			$board = (int) isset($pretty_board_lookup[$_REQUEST['board']]) ? $pretty_board_lookup[$_REQUEST['board']] : 0;
+		}
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		$topic = (int) $_REQUEST['topic'];
+]]></search>
+			<add><![CDATA[
+		// Check for pretty topic URLs, and possibly redirect if oldschool queries were used.
+		if (is_numeric($_REQUEST['topic']))
+		{
+			$topic = (int) $_REQUEST['topic'];
+			if (!isset($_REQUEST['pretty']))
+				$context['pretty']['oldschoolquery'] = true;
+		} else {
+			$_REQUEST['topic'] = str_replace('\\', '', $_REQUEST['topic']);
+			$_REQUEST['topic'] = str_replace('&#039;', "\'", $_REQUEST['topic']);
+			//	Are we feeling lucky?
+			$query = db_query("
+				SELECT ID_TOPIC
+				FROM {$db_prefix}pretty_topic_urls
+				WHERE pretty_url = '$_REQUEST[topic]'
+				LIMIT 1", __FILE__, __LINE__);
+			//	No? No topic?!
+			if (mysql_num_rows($query) == 0)
+			{
+				$topic = 0;
+			} else {
+				while ($row = mysql_fetch_assoc($query))
+					$topic = (int) $row['ID_TOPIC'];
+			}
+			mysql_free_result($query);
+
+			//	That query should be counted separately
+			$context['pretty']['db_count']++;
+		}
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Subs-Boards.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function modifyBoard($board_id, &$boardOptions)
+{
+	global $sourcedir, $cat_tree, $boards, $boardList, $modSettings, $db_prefix;
+]]></search>
+			<add><![CDATA[
+function modifyBoard($board_id, &$boardOptions)
+{
+	global $sourcedir, $cat_tree, $boards, $boardList, $modSettings, $db_prefix, $context;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+	if (isset($boardOptions['move_to']))
+		reorderBoards();
+]]></search>
+			<add><![CDATA[
+	if (isset($boardOptions['move_to']))
+		reorderBoards();
+
+//	Update the pretty board URLs
+	if (isset($boardOptions['pretty_url']))
+	{
+		require_once($sourcedir . '/Subs-PrettyUrls.php');
+
+		//	Get the current board URLs
+		$pretty_board_lookup = unserialize($modSettings['pretty_board_lookup']);
+		//	Generate a new one
+		$pretty_url = generatePrettyUrl($boardOptions['pretty_url']);
+
+		//	Can't be empty, can't be a number and can't be the same as another
+		if ($pretty_url == '' || is_numeric($pretty_url) || (isset($pretty_board_lookup[$pretty_url]) && $pretty_board_lookup[$pretty_url] != $ID_BOARD))
+			//	Add suffix '-bID_BOARD' to the pretty url
+			$pretty_url .= ($pretty_url != '' ? '-b' : 'b') . $ID_BOARD;
+
+		//	Save to the database
+		$context['pretty']['board_urls'][$ID_BOARD] = $pretty_url;
+		$pretty_board_lookup[$pretty_url] = $ID_BOARD;
+		updateSettings(array(
+			'pretty_board_lookup' => addslashes(serialize($pretty_board_lookup)),
+			'pretty_board_urls' => addslashes(serialize($context['pretty']['board_urls'])),
+		));
+
+		//	Count that query!
+		$context['pretty']['db_count']++;
+	}
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+	// Change the board according to the given specifications.
+]]></search>
+			<add><![CDATA[
+	if (!isset($boardOptions['pretty_url']))
+		$boardOptions['pretty_url'] = $boardOptions['board_name'];
+
+	// Change the board according to the given specifications.
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Subs-Post.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
+{
+	global $db_prefix, $user_info, $ID_MEMBER, $txt, $modSettings;
+]]></search>
+			<add><![CDATA[
+function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
+{
+	global $db_prefix, $user_info, $ID_MEMBER, $txt, $modSettings, $context, $sourcedir;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		// There's been a new topic AND a new post today.
+]]></search>
+			<add><![CDATA[
+		//	Generate the pretty URL of our exciting new topic
+		require_once($sourcedir . '/Subs-PrettyUrls.php');
+		$pretty_text = substr(generatePrettyUrl($msgOptions['subject']), 0, 80);
+
+		//	Is the URL already there?
+		$query = db_query("
+			SELECT ID_TOPIC
+			FROM {$db_prefix}pretty_topic_urls
+			WHERE pretty_url = '$pretty_text'
+			LIMIT 1", __FILE__, __LINE__);
+		//	If it's not unique we need to change it
+		$notunique = mysql_num_rows($query);
+		mysql_free_result($query);
+
+		//	Can't be empty, can't be a number and can't be the same as another
+		if ($pretty_text == '' || is_numeric($pretty_text) || $notunique != 0)
+			//	Add suffix '-tID_TOPIC' to the pretty url
+			$pretty_text = substr($pretty_text, 0, 70) . ($pretty_text != '' ? '-t' : 't') . $topicOptions['id'];
+
+		//	Update the database
+		db_query("
+			REPLACE INTO {$db_prefix}pretty_topic_urls (ID_TOPIC, ID_BOARD, pretty_url) 
+			VALUES (" . $topicOptions['id'] .', ' . $topicOptions['board'] . ', "' . $pretty_text . '")', __FILE__, __LINE__);
+
+		//	Count those queries!
+		$context['pretty']['db_count'] = $context['pretty']['db_count'] + 2;
+
+		// There's been a new topic AND a new post today.
+]]></add>
+		</operation>
+	</file>
+
+</modification>
